# gitS

./: CMakeLists.txt  main.cpp
src/: StudList.cpp  StudList.h  student.cpp  student.h
